--- a/packages/ui/tsconfig.build.json
+++ b/packages/ui/tsconfig.build.json
@@ -1,12 +1,11 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "declaration": true,
     "emitDeclarationOnly": true,
     "noEmit": false,
     "outDir": "dist",
-    "rootDir": "src"
   },
+  "include": ["src/**/*"],
   "exclude": ["**/*.stories.tsx"],
-  "extends": "./tsconfig.json",
-  "include": ["src"]
 }
