--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "dev": "turbo run dev",
     "format": "turbo run format",
     "lint": "turbo run lint",
-    "push": "turbo run build lint test && changeset version && changeset publish",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "push": "turbo run build lint test && changeset version && changeset publish"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
@@ -21,9 +21,9 @@
     "@turbo/gen": "^1.10.16",
     "bun-types": "^1.0.7",
     "eslint": "^8.52.0",
+    "husky": "^8.0.3",
     "prettier": "^3.0.3",
     "turbo": "^1.10.16",
-    "typescript": "^5.2.2",
-    "husky": "^8.0.3"
+    "typescript": "^5.2.2"
   }
 }
