--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,7 +23,8 @@
     "format": "prettier --write src",
     "lint": "tsc && eslint --fix src",
     "push": "bun run lint && bun run build && npm publish",
-    "storybook": "storybook dev -p 6006"
+    "storybook": "storybook dev -p 6006",
+    "test": "vitest"
   },
   "dependencies": {
     "@douglasneuroinformatics/form-types": "^5.2.0",
@@ -55,6 +56,9 @@
     "@storybook/blocks": "^7.5.1",
     "@storybook/react": "^7.5.1",
     "@storybook/react-vite": "^7.5.1",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/jest-dom": "^6.4.2",
     "@types/lodash": "^4.14.200",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
@@ -62,6 +66,7 @@
     "esbuild": "^0.19.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
+    "happy-dom": "^13.3.8",
     "postcss": "^8.4.31",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "react": "^18.2.0",
@@ -69,7 +74,8 @@
     "storybook": "^7.5.1",
     "storybook-react-i18next": "^2.0.9",
     "tailwindcss": "^3.3.5",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "vitest": "^1.2.2"
   },
   "peerDependencies": {
     "@headlessui/tailwindcss": "^0.2.0",
