--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -97,19 +97,14 @@
     "happy-dom": "^13.3.8",
     "postcss": "^8.4.31",
     "prettier-plugin-tailwindcss": "^0.5.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "storybook": "^7.5.1",
     "storybook-react-i18next": "^2.0.9",
-    "tailwindcss": "^3.3.5",
     "vite": "^4.5.0"
   },
   "peerDependencies": {
-    "@headlessui/tailwindcss": "^0.2.0",
-    "@tailwindcss/container-queries": "^0.1.1",
-    "react": ">=18",
-    "react-dom": ">=18",
-    "tailwindcss": ">=3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.5"
   },
   "publishConfig": {
     "access": "public"
