--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -78,13 +78,13 @@
     "zustand": "^4.4.4"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.5.1",
-    "@storybook/addon-interactions": "^7.5.1",
-    "@storybook/addon-links": "^7.5.1",
-    "@storybook/addon-styling": "^1.3.7",
-    "@storybook/blocks": "^7.5.1",
-    "@storybook/react": "^7.5.1",
-    "@storybook/react-vite": "^7.5.1",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/addon-themes": "^7.6.17",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/react-vite": "^7.6.17",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
@@ -97,8 +97,8 @@
     "happy-dom": "^13.3.8",
     "postcss": "^8.4.31",
     "prettier-plugin-tailwindcss": "^0.5.6",
-    "storybook": "^7.5.1",
-    "storybook-react-i18next": "^2.0.9",
+    "storybook": "^7.6.17",
+    "storybook-react-i18next": "^2.1.1",
     "vite": "^4.5.0"
   },
   "peerDependencies": {
