--- a/packages/form-types/package.json
+++ b/packages/form-types/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "format": "prettier --write index.d.ts",
-    "lint": "tsc && eslint --fix index.d.ts"
+    "lint": "tsc && eslint --no-ignore --fix index.d.ts"
   },
   "dependencies": {
     "type-fest": "^4.6.0"
