--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -83,6 +83,7 @@
     "@storybook/addon-links": "^7.6.17",
     "@storybook/addon-themes": "^7.6.17",
     "@storybook/blocks": "^7.6.17",
+    "@storybook/icons": "^1.2.5",
     "@storybook/react": "^7.6.17",
     "@storybook/react-vite": "^7.6.17",
     "@testing-library/jest-dom": "^6.4.2",
